# test-actions

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  action-license.lic  hexify_pubkey.py  protect_pubkey.py
.github/workflows/: blank.yml  codeql.yml  extra-builds.yml  license.yml  prepare-docs.yml  source-vendor.yml  tabby.yml  test-build.yml  test-compile.yml  test-sanitizers.yml  test-verific.yml  update-flake-lock.yml  wheels.yml
docs/source/: index.rst
kernel/: yosys.cc
lib/: CMakeLists.txt  main.c  preload.c
src/: CMakeLists.txt  checks.cpp  license.cpp  main.cpp  parser.cpp
src/include/: checks.h  parser.h
test/: CMakeLists.txt  test_parser.cpp
